// Vitest Snapshot v1

exports[`code() builder using Prism (incl generalized tests) > line highlighting of line range works using vuepress/vitepress syntax 1`] = `
"<div class=\\"markdown-body\\"><h1>Code Builder Test</h1>
<p>this test is intended to validate testing of code blocks</p>
<div class=\\"code-wrapper\\"><div class=\\"code-block language-typescript\\" data-lang=\\"ts\\" data-modifiers=\\"\\"><pre class=\\"language-typescript\\" data-lang=\\"ts\\" v-pre=\\"true\\">
<div class=\\"code-line odd first-row line-1\\"><span class=\\"token keyword\\">type</span> <span class=\\"token class-name\\">Valid</span> <span class=\\"token operator\\">=</span> <span class=\\"token string\\">'foo'</span> <span class=\\"token operator\\">|</span> <span class=\\"token string\\">'bar'</span> <span class=\\"token operator\\">|</span> <span class=\\"token string\\">'baz'</span></div>
<div class=\\"code-line even line-2\\"><span class=\\"token keyword\\">const</span> testVariable<span class=\\"token operator\\">:</span> Valid <span class=\\"token operator\\">=</span> <span class=\\"token string\\">'foo'</span></div>
<div class=\\"code-line odd line-3 highlight\\"><span class=\\"token keyword\\">function</span> <span class=\\"token function\\">myFunc</span><span class=\\"token punctuation\\">(</span>name<span class=\\"token operator\\">:</span> <span class=\\"token builtin\\">string</span><span class=\\"token punctuation\\">)</span> <span class=\\"token punctuation\\">{</span></div>
<div class=\\"code-line even line-4 highlight\\">  <span class=\\"token keyword\\">return</span> <span class=\\"token template-string\\"><span class=\\"token template-punctuation string\\">\`</span><span class=\\"token string\\">hello </span><span class=\\"token interpolation\\"><span class=\\"token interpolation-punctuation punctuation\\">\${</span>name<span class=\\"token interpolation-punctuation punctuation\\">}</span></span><span class=\\"token template-punctuation string\\">\`</span></span></div>
<div class=\\"code-line odd last-row line-5 highlight\\"><span class=\\"token punctuation\\">}</span></div></pre>
</div></div><p>The test is now complete; everyone should return to their desks.</p>
</div>"
`;

exports[`code() builder using Prism (incl generalized tests) > line highlighting of single line works using vuepress/vitepress syntax 1`] = `
"<div class=\\"markdown-body\\"><h1>Code Builder Test</h1>
<p>this test is intended to validate testing of code blocks</p>
<div class=\\"code-wrapper\\"><div class=\\"code-block language-typescript line-numbers-mode\\" data-lang=\\"ts\\" data-modifiers=\\"\\"><pre class=\\"language-typescript\\" data-lang=\\"ts\\" v-pre=\\"true\\">
<div class=\\"code-line odd first-row line-1\\"><span class=\\"token keyword\\">type</span> <span class=\\"token class-name\\">Valid</span> <span class=\\"token operator\\">=</span> <span class=\\"token string\\">'foo'</span> <span class=\\"token operator\\">|</span> <span class=\\"token string\\">'bar'</span> <span class=\\"token operator\\">|</span> <span class=\\"token string\\">'baz'</span></div>
<div class=\\"code-line even line-2\\"><span class=\\"token keyword\\">const</span> testVariable<span class=\\"token operator\\">:</span> Valid <span class=\\"token operator\\">=</span> <span class=\\"token string\\">'foo'</span></div>
<div class=\\"code-line odd line-3\\"><span class=\\"token keyword\\">function</span> <span class=\\"token function\\">myFunc</span><span class=\\"token punctuation\\">(</span>name<span class=\\"token operator\\">:</span> <span class=\\"token builtin\\">string</span><span class=\\"token punctuation\\">)</span> <span class=\\"token punctuation\\">{</span></div>
<div class=\\"code-line even line-4 highlight\\">  <span class=\\"token keyword\\">return</span> <span class=\\"token template-string\\"><span class=\\"token template-punctuation string\\">\`</span><span class=\\"token string\\">hello </span><span class=\\"token interpolation\\"><span class=\\"token interpolation-punctuation punctuation\\">\${</span>name<span class=\\"token interpolation-punctuation punctuation\\">}</span></span><span class=\\"token template-punctuation string\\">\`</span></span></div>
<div class=\\"code-line odd last-row line-5\\"><span class=\\"token punctuation\\">}</span></div></pre>
<div class=\\"line-numbers-wrapper\\"><span class=\\"line-number\\">1</span><span class=\\"line-number\\">2</span><span class=\\"line-number\\">3</span><span class=\\"line-number highlight\\">4</span><span class=\\"line-number\\">5</span></div>
</div></div><p>The test is now complete; everyone should return to their desks.</p>
</div>"
`;

exports[`code() builder using Prism (incl generalized tests) > line numbers are displayed when set 1`] = `
"<div class=\\"markdown-body\\"><h1>Code Builder Test</h1>
<p>this test is intended to validate testing of code blocks</p>
<div class=\\"code-wrapper\\"><div class=\\"code-block language-typescript line-numbers-mode\\" data-lang=\\"ts\\" data-modifiers=\\"\\"><pre class=\\"language-typescript\\" data-lang=\\"ts\\" v-pre=\\"true\\">
<div class=\\"code-line odd first-row line-1\\"><span class=\\"token keyword\\">type</span> <span class=\\"token class-name\\">Valid</span> <span class=\\"token operator\\">=</span> <span class=\\"token string\\">'foo'</span> <span class=\\"token operator\\">|</span> <span class=\\"token string\\">'bar'</span> <span class=\\"token operator\\">|</span> <span class=\\"token string\\">'baz'</span></div>
<div class=\\"code-line even line-2\\"><span class=\\"token keyword\\">const</span> testVariable<span class=\\"token operator\\">:</span> Valid <span class=\\"token operator\\">=</span> <span class=\\"token string\\">'foo'</span></div>
<div class=\\"code-line odd line-3\\"><span class=\\"token keyword\\">function</span> <span class=\\"token function\\">myFunc</span><span class=\\"token punctuation\\">(</span>name<span class=\\"token operator\\">:</span> <span class=\\"token builtin\\">string</span><span class=\\"token punctuation\\">)</span> <span class=\\"token punctuation\\">{</span></div>
<div class=\\"code-line even line-4\\">  <span class=\\"token keyword\\">return</span> <span class=\\"token template-string\\"><span class=\\"token template-punctuation string\\">\`</span><span class=\\"token string\\">hello </span><span class=\\"token interpolation\\"><span class=\\"token interpolation-punctuation punctuation\\">\${</span>name<span class=\\"token interpolation-punctuation punctuation\\">}</span></span><span class=\\"token template-punctuation string\\">\`</span></span></div>
<div class=\\"code-line odd last-row line-5\\"><span class=\\"token punctuation\\">}</span></div></pre>
<div class=\\"line-numbers-wrapper\\"><span class=\\"line-number\\">1</span><span class=\\"line-number\\">2</span><span class=\\"line-number\\">3</span><span class=\\"line-number\\">4</span><span class=\\"line-number\\">5</span></div>
</div></div><p>The test is now complete; everyone should return to their desks.</p>
</div>"
`;

exports[`code() builder using Prism (incl generalized tests) > valid language choice is rendered 1`] = `
"<div class=\\"markdown-body\\"><h1>Code Builder Test</h1>
<p>This test is intended to validate testing of code blocks; the first test is a typescript block.</p>
<div class=\\"code-wrapper\\"><div class=\\"code-block language-typescript\\" data-lang=\\"ts\\" data-modifiers=\\"\\"><pre class=\\"language-typescript foobar\\" data-lang=\\"ts\\" v-pre=\\"true\\">
<div class=\\"code-line odd first-row line-1\\"><span class=\\"token keyword\\">type</span> <span class=\\"token class-name\\">Valid</span> <span class=\\"token operator\\">=</span> <span class=\\"token string\\">'foo'</span> <span class=\\"token operator\\">|</span> <span class=\\"token string\\">'bar'</span> <span class=\\"token operator\\">|</span> <span class=\\"token string\\">'baz'</span></div>
<div class=\\"code-line even last-row line-2\\"><span class=\\"token keyword\\">const</span> t<span class=\\"token operator\\">:</span> Valid <span class=\\"token operator\\">=</span> <span class=\\"token string\\">'foo'</span></div></pre>
</div></div><p>But now we have some Rust code too:</p>
<div class=\\"code-wrapper\\"><div class=\\"code-block language-rust line-numbers-mode\\" data-lang=\\"rust\\" data-modifiers=\\"!,#\\"><pre class=\\"language-rust foobar\\" data-lang=\\"rust\\" style=\\"classless\\">
<div class=\\"code-line odd first-row line-1\\"><span class=\\"token keyword\\">let</span> count<span class=\\"token punctuation\\">:</span> <span class=\\"token keyword\\">usize</span> <span class=\\"token operator\\">=</span> <span class=\\"token number\\">100</span><span class=\\"token punctuation\\">;</span></div></pre>
<div class=\\"line-numbers-wrapper\\"><span class=\\"line-number\\">1</span></div>
</div></div><p>The test is now complete; everyone should return to their desks.</p>
</div>"
`;
